<?xml version="1.0"?>

<package format="2">
  <name>gazebo-plugin-autonomous-actor</name>
  <version>0.0.0</version>
  <description>
    The autonomous actor plugin allows user to specify a few location with respect to the world frame and loop these location by visiting them autonomously.
  </description>
  <maintainer email="jianle001@e.ntu.edu.sg">Bruce Chan Jian Le</maintainer>
  <author email="jianle001@e.ntu.edu.sg">Bruce Chan Jian Le</author>
  <license>BSD</license>
  <url type="website">https://github.com/BruceChanJianLe/gazebo-plugin-autonomous-actor</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}"/>
  </export>

</package>
